--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,25 @@
- /* styles.css */
+
 #first{
-    border: 2px solid black;
+    border: 2px solid black ;
+    border: 2px solid #000;
+    padding: 15px;
+    margin: 5px; 
+    border-radius: 1px; 
+  }
+  
+  p {
+    margin: 0;
+  }
+
+
+h1{
+    text-decoration: underline 2px;
 }
 a{
     color: black;
+    display: inline-block; 
+    margin-top: 15px; 
 }
+  
+  p {
+    margin: 0; }
